# cli

./: .all-contributorsrc  .autorc  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.mts
.circleci/: config.yml
.devcontainer/: devcontainer.json
cli/: BUILD  package.json
cli/src/__tests__/commands/: check.test.ts  dsl-compile.test.ts  dsl-validate.test.ts  json-validate.test.ts  xlr-compile.test.ts  xlr-convert.test.ts
cli/src/__tests__/fixtures/dsl/: minimal.ts
cli/src/__tests__/fixtures/json/: valid.json
cli/src/__tests__/fixtures/types/: basic.ts
cli/src/commands/dependency-versions/: check.ts
cli/src/commands/dsl/: compile.ts
cli/src/commands/xlr/: compile.ts  convert.ts
cli/src/plugins/: LSPAssetsPlugin.ts  LSPPluginPlugin.ts  LSPTransformsPlugin.ts  index.ts
cli/src/plugins/__tests__/: LSPAssetsPlugin.test.ts
cli/src/utils/: base-command.ts  compilation-context.ts  compile-renderer.ts
cli/src/utils/xlr/visitors/: file.ts  plugin.ts  types.ts
helpers/: BUILD  defs.bzl
