module(name = "player-tools", version = "1.0")

bazel_dep(name = "rules_player")

archive_override(
  module_name = "rules_player",
  strip_prefix = "rules_player-2.3.0",
  urls = ["https://github.com/player-ui/rules_player/archive/refs/tags/v2.3.0.tar.gz"],
  integrity = "sha256-ic72uLj5+fdjFXxwmtRrHGPlWA3ewTXB6Gx6TRMKgh4="
)

bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.6.3")

####### Node.js version #########
bazel_dep(name = "rules_nodejs", version = "6.6.2")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.21.1")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    data = [
        "//:package.json",
    ],
    npmrc = "//:.npmrc",
    npm_package_target_name = "{dirname}"
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")